Fix SpotBugs findings for the gaming package
The JDK 8 unit-test job runs SpotBugs (threshold Low, failOnError) and
reported 76 bugs from the new code.

- Exclude the vendored com.codename1.gaming.physics.box2d package
  (lightly adapted JBox2D, BSD-2) from SpotBugs wholesale, the same way
  TarEntry and the gzip classes are already excluded. The idiomatic
  com.codename1.gaming.physics wrapper is still analyzed.
- Fix the findings in our own code: replace new Integer(int) with
  Integer.valueOf(int) in GameInput and MediaSoundPoolPeer
  (DM_NUMBER_CTOR); make PhysicsWorld.ContactDispatcher a static nested
  class and hoist MediaSoundPoolPeer's loop-restart Runnable into a
  static RestartVoice class (SIC_INNER_SHOULD_BE_STATIC[_ANON]).

Verified locally: `mvn -pl core-unittests -am verify` SpotBugs check is
BUILD SUCCESS, and physics contacts still fire after the dispatcher
change.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>